--- a/deploy/complete/terraform/terraform.tfvars.example
+++ b/deploy/complete/terraform/terraform.tfvars.example
@@ -21,7 +21,7 @@ cluster_workers_visibility = "Private"
 create_new_oke_cluster  = true
 existent_oke_cluster_id = "" # e.g.: ocid1.cluster.oc1...
 ## Encryption (OCI Vault/Key Management/KMS)
-use_encryption            = false
+use_encryption_from_oci_vault            = false
 create_new_encryption_key = false
 encryption_key_id         = "" # e.g.: "ocid1.key.oc1..."
 
