--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -54,17 +54,18 @@ variableGroups:
     - image_operating_system_version
     - node_pool_name
 
+  - title: "Dynamic Group and Policies"
+    variables:
+    - create_dynamic_group_for_nodes_in_compartment
+    - existent_dynamic_group_for_nodes_in_compartment
+    - create_compartment_policies
+    - create_tenancy_policies
+
   - title: "Encryption using OCI Vault (KMS)"
     variables:
     - use_encryption_from_oci_vault
     - create_new_encryption_key
-    - encryption_key_id
-
-  - title: "Dynamic Group and Policies"
-    variables:
-    - create_dynamic_group_for_nodes_in_compartment
-    - create_compartment_policies
-    - create_tenancy_policies
+    - existent_encryption_key_id    
 
   - title: "Cluster Utilities (MuShop Utilities)"
     variables:
@@ -233,36 +234,6 @@ variables:
   #       - not:
   #         - create_new_oke_cluster
 
-  use_encryption_from_oci_vault:
-    type: boolean
-    title: "Encrypt using Customer-Managed Keys instead of Oracle Managed Encryption"
-    visible:
-      and:
-        - create_new_oke_cluster
-        - show_advanced
-
-  create_new_encryption_key:
-    type: boolean
-    title: "Create new Vault and Key"
-    visible:
-      and:
-        - create_new_oke_cluster
-        - show_advanced
-        - use_encryption_from_oci_vault
-
-  encryption_key_id:
-    type: string
-    title: "Existent Encryption Key OCID"
-    required: true
-    visible:
-      and:
-        - and:
-          - create_new_oke_cluster
-          - show_advanced
-          - use_encryption_from_oci_vault
-        - not:
-          - create_new_encryption_key
-
   create_new_compartment_for_oke:
     type: boolean
     title: "Create new Compartment"
@@ -339,31 +310,6 @@ variables:
     title: "Kubernetes Dashboard Enabled"
     visible: false
 
-  # Dynamic Groups and Policies for Instance Principals and Autoscaler
-  create_dynamic_group_for_nodes_in_compartment:
-    type: boolean
-    title: "Create Dynamic Group for Worker Nodes in the Compartment"
-    required: true
-    visible:
-      and:
-        - show_advanced
-
-  create_compartment_policies:
-    type: boolean
-    title: "Create Compartment Policies"
-    required: true
-    visible:
-      and:
-        - show_advanced
-
-  create_tenancy_policies:
-    type: boolean
-    title: "Create Tenancy Policies"
-    required: true
-    visible:
-      and:
-        - show_advanced
-
   generate_public_ssh_key:
     type: boolean
     title: "Auto generate public ssh key?"
@@ -408,12 +354,79 @@ variables:
         - create_new_oke_cluster
         - show_advanced
 
+  # Dynamic Groups and Policies for Instance Principals and Autoscaler
+  create_dynamic_group_for_nodes_in_compartment:
+    type: boolean
+    title: "Create Dynamic Group for Worker Nodes in the Compartment"
+    required: true
+    visible:
+      and:
+        - show_advanced
+
+  existent_dynamic_group_for_nodes_in_compartment:
+    type: string
+    required: true
+    title: "Image OS Version"
+    visible:
+      and:
+        - create_new_oke_cluster
+        - show_advanced
+        
+  create_compartment_policies:
+    type: boolean
+    title: "Create Compartment Policies"
+    required: true
+    visible:
+      and:
+        - show_advanced
+
+  create_tenancy_policies:
+    type: boolean
+    title: "Create Tenancy Policies"
+    required: true
+    visible:
+      and:
+        - show_advanced
+
+  # Encryption options
+  use_encryption_from_oci_vault:
+    type: boolean
+    title: "Encrypt using Customer-Managed Keys instead of Oracle Managed Encryption"
+    visible:
+      and:
+        - create_new_oke_cluster
+        - show_advanced
+
+  create_new_encryption_key:
+    type: boolean
+    title: "Create new Vault and Key"
+    visible:
+      and:
+        - create_new_oke_cluster
+        - show_advanced
+        - use_encryption_from_oci_vault
+
+  existent_encryption_key_id:
+    type: string
+    title: "Existent Encryption Key OCID"
+    required: true
+    visible:
+      and:
+        - and:
+          - create_new_oke_cluster
+          - show_advanced
+          - use_encryption_from_oci_vault
+        - not:
+          - create_new_encryption_key
+
+  # MuShop
   mushop_mock_mode_all:
     visible: yes
     type: boolean
     required: true
     title: "Enable Mock Mode"
 
+  # Cluster Utilities
   grafana_enabled:
     type: boolean
     title: "Grafana"
