--- a/deploy/complete/terraform/terraform.tfvars.example
+++ b/deploy/complete/terraform/terraform.tfvars.example
@@ -15,18 +15,23 @@ compartment_ocid = "ocid1.compartment...."
 region = "us-ashburn-1"
 
 # OKE Cluster
+
 ## Cluster Workers visibility
 cluster_workers_visibility = "Private"
+
 ## Cluster API Endpoint visibility
 cluster_endpoint_visibility = "Public"
+
 ## create_new_oke_cluster
 create_new_oke_cluster         = true
 existent_oke_cluster_id        = "" # e.g.: ocid1.cluster.oc1...
 create_new_compartment_for_oke = false
+
 ## Create Dynamic group and Policies for Autoscaler and OCI Metrics and Logging
 create_dynamic_group_for_nodes_in_compartment = true
 create_compartment_policies                   = true
 create_tenancy_policies                       = true
+
 ## Encryption (OCI Vault/Key Management/KMS)
 use_encryption_from_oci_vault = false
 create_new_encryption_key     = false
@@ -44,12 +49,14 @@ public_ssh_key                            = ""   # if generate_public_ssh_key=tr
 ingress_load_balancer_shape = "100Mbps"
 
 # MuShop
+
 ## Enable Mock Mode
 mushop_mock_mode_all = false # Set to true if do not want to provision ATP, ObjectStorage and mock all services
+
 ## Common Services (MuShop Utilities)
 grafana_enabled        = true
 prometheus_enabled     = true
 metrics_server_enabled = true
-catalog_enabled        = true
+catalog_enabled        = false
 ingress_nginx_enabled  = true
 cert_manager_enabled   = true
