mushop basic: oracle client updated to 19.10

--- a/deploy/basic/Dockerfile
+++ b/deploy/basic/Dockerfile
@@ -4,7 +4,7 @@
 # 
 
 # Oracle Instant Client version
-ARG oracleClientVersion=19.8
+ARG oracleClientVersion=19.10
 
 ###############################
 #    ----- STOREFRONT -----   #
@@ -118,6 +118,13 @@ RUN GO111MODULE=on GOARCH=amd64 GOOS=linux \
   -installsuffix cgo \
   -o /catalogue mushop/catalogue/cmd/cataloguesvc
 
+# # Build Catalogue service
+RUN GO111MODULE=on GOARCH=arm64 GOOS=linux \
+  go build -a \
+  -ldflags="-s -w" \
+  -installsuffix cgo \
+  -o /catalogue-arm64 mushop/catalogue/cmd/cataloguesvc
+
 #    ------ Catalogue ------  #
 
 ###############################
@@ -161,6 +168,7 @@ WORKDIR /
 COPY --from=storefront-builder /app/storefront/build /app/storefront
 COPY --from=api-builder /app/api /app/api
 COPY --from=catalogue-builder /catalogue /app/catalogue/catalogue
+COPY --from=catalogue-builder /catalogue-arm64 /app/catalogue/catalogue-arm64
 COPY src/catalogue/VERSION /app/catalogue/
 
 # Create zip package of the Apps and local images
